overflow fixed

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -600,7 +600,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 
@@ -2388,8 +2388,12 @@ footer {
   flex-direction: column;
   gap: 8px;
   padding: 0px 16px;
-  max-height: 540px;
   overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 0;
+  max-height: 540px;
+  height: 420px;
   overflow-y: auto;
 }
   .playlist::-webkit-scrollbar {
@@ -2711,7 +2715,6 @@ footer {
       #videoPlayerContainer{
         width: 100%;
         height: 100%;
-        /*min-height: 0;*/
       }
       .video-container{
         width: 100%;
@@ -2724,12 +2727,9 @@ footer {
       .video-principal{
         width: 100%;
         height: auto;
-        border: solid 1px green;
-        /*min-height: 0;*/
       }
       .playlist{
         width: 100%;
-        /*height: 100%;*/
         height: 0;
         max-height: 160px;
         height: 180px;
@@ -2878,6 +2878,16 @@ footer {
       gap: 1rem;
       text-align: center;
     }
+    .vpc-header{
+      width: 100%;
+      flex-direction: column;
+      padding: 0;
+      text-align: center;
+      gap: 8px;
+    }  
+      #estadoProgreso{
+        display: none;
+      }
   /* ----ENDS MODAL WINDOWS  */
 
   /* footer */
